--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "next": "12.1.6",
+    "framer-motion": "^6.3.16",
+    "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
