--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.25",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.3.16",
     "next": "^12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
