--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "embla-carousel-react": "^7.0.0-rc05",
     "framer-motion": "^6.3.16",
     "next": "^12.2.2",
     "react": "18.2.0",
