Add body scroll lock and refactor cart.  Still need to fix loss of scroll pos

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "embla-carousel-react": "^7.0.0-rc05",
     "framer-motion": "^6.3.16",
     "next": "^12.2.2",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
