--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.2",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "embla-carousel-react": "^7.0.0-rc05",
+    "embla-carousel-react": "^7.0.3",
     "framer-motion": "^6.3.16",
-    "next": "^12.2.2",
+    "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
