--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@sanity/asset-utils": "^1.3.0",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "next-sanity-image": "^4.1.0",
     "typescript": "4.8.3"
   }
 }
