--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^7.6.2",
