--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@next/font": "^13.0.3",
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^7.6.2",
-    "next": "^12.3.1",
+    "next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -27,7 +28,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "13.0.3",
     "typescript": "4.8.4"
   }
 }
