--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "axios": "^1.2.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "embla-carousel-react": "^7.0.5",
     "framer-motion": "^7.6.19",
     "next": "^13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "shopify-buy": "^2.17.1",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.0",
