--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "@sanity/webhook": "^2.0.0",
     "axios": "^1.2.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "embla-carousel-react": "^7.0.5",
