--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@next/font": "^13.0.6",
-    "@portabletext/react": "^1.0.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@next/font": "^13.4.7",
+    "@portabletext/react": "^3.0.3",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sanity/webhook": "^2.0.0",
-    "axios": "^1.2.1",
+    "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "embla-carousel-react": "^7.0.5",
+    "embla-carousel-react": "^8.0.0-rc07",
     "framer-motion": "^7.6.19",
-    "next": "^13.0.6",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shopify-buy": "^2.17.1",
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.0",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "typescript": "4.9.4"
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "typescript": "5.1.3"
   }
 }
