--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/webhook": "^2.0.0",
     "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "currency-symbol-map": "^5.1.0",
     "embla-carousel-react": "^8.0.0-rc07",
     "framer-motion": "^7.6.19",
     "next": "^13.4.7",
